2003-10-13  Bernie Solomon  <bernard@ugsolutions.com>

	* x86/tramp.c: restore EDX after memcpy call

2003-10-13  Bernie Solomon  <bernard@ugsolutions.com>

	* Makefile.am: add hppa subdir 

	* hppa/tramp.c: add initial implementation - this is 64 bit only
	hppa/Makefile.am hppa/.cvsignore: added

2003-10-13  Bernie Solomon  <bernard@ugsolutions.com>

	* sparc/sparc-codegen.h sparc/tramp.c: add initial implementation
	for V9 (64 bit), cover more 32 bit cases as well.

2003-09-03  Zoltan Varga  <vargaz@freemail.hu>

	* x86/tramp.c: Fixes from Bernie Solomon (bernard@ugsolutions.com).

2003-08-21  Zoltan Varga  <vargaz@freemail.hu>

	* x86/tramp.c: Fixes from Bernie Solomon (bernard@ugsolutions.com).

Tue Jul 1 13:03:43 CEST 2003 Paolo Molaro <lupus@ximian.com>

	* alpha/tramp.c: update from Laramie Leavitt (lar@leavitt.us).

2003-05-20  Dietmar Maurer  <dietmar@ximian.com>

	* x86/x86-codegen.h (x86_set_reg): add an assertion - it does
	not work for all registers.

Sat Feb 1 10:59:31 CET 2003 Paolo Molaro <lupus@ximian.com>

	* alpha/*: update from Laramie.

Mon Jan 27 12:49:10 CET 2003 Paolo Molaro <lupus@ximian.com>

	* alpha/*: start of the port to the alpha architecture by
	Laramie Leavitt (<lar@leavitt.us>).

Tue Jan 21 17:29:53 CET 2003 Paolo Molaro <lupus@ximian.com>

	* ppc/ppc-codegen.h: completed ppc native code generation by
	Taylor Christopher P <ct@cs.clemson.edu>.

Fri Jan 17 21:14:18 CET 2003 Paolo Molaro <lupus@ximian.com>

	* ppc/tramp.c: adapted to work for MacOSX (from a patch by 
	John Duncan).

2002-11-11  Mark Crichton  <crichton@gimp.org>

	* sparc/tramp.c: Added some disassembly bits for debugging.

2002-10-02  Mark Crichton  <crichton@gimp.org>

	* sparc/tramp.c: More cleanup of the trampoline code.  Still some
	problems with it w.r.t. delegates.

2002-09-25  Mark Crichton  <crichton@gimp.org>

	* sparc/tramp.c: Off by one error.  Whoops.  Trampoline code should
	now work properly.

2002-09-24  Mark Crichton  <crichton@gimp.org>
