@@ -1,3 +1,12 @@
+2003-10-31  Zoltan Varga  <vargaz@freemail.hu>
+
+	* */tramp.c (mono_create_method_pointer): Rename to 
+	mono_arch_create_method_pointer, move common code to a new function in
+	interp.c.
+
+	* */tramp.c (mono_create_trampoline): Rename to 
+	mono_arch_create_trampoline for consistency.
+	
 2003-10-13  Bernie Solomon  <bernard@ugsolutions.com>
 
 	* x86/tramp.c: restore EDX after memcpy call
